# opencl_samples

./: README.md
convolution/: CMakeLists.txt  convolution.cl  main.cpp
matrix_mult/: CMakeLists.txt  main.cpp  matrix_mult.cl
reduce/: CMakeLists.txt  main.cpp  reduce.cl
scan/: CMakeLists.txt  cl2.hpp  main.cpp  scan.cl
vector_add/: CMakeLists.txt  main.cpp  vector_add.cl
